--- a/index.html
+++ b/index.html
@@ -3,17 +3,39 @@
 <head>
 	<meta charset="utf-8">
 	<script>
-		// TODO: create a handler
+	let actions = {
+   		"google": "https://www.google.com/",
+   		"duckDuckGo": "https://duckduckgo.com/",
+		"bing": "https://www.bing.com/search",
+		"ask": "https://www.ask.com/web"
+	};
+	
+	function setSearchEngine(){
+		let engineChoice = document.querySelector("input[name=engine]:checked");
+		let actionURL = searchForm.getAttribute("action");
+		for(let keyName in actions){
+			if (engineChoice.value === keyName) {
+				searchForm.setAttribute("action", actions[keyName]);
+			}
+		}
+	}
+	
     window.addEventListener("load", function(){
-        // TODO: register the handler
+        let button = document.getElementById("submitButton");
+		button.addEventListener("click", setSearchEngine);
     });
 	</script>
 </head>
 
 <body>
 
-	<form id="searchForm">
-    <!-- TODO: add form elements -->
+	<form id="searchForm" action="thisIsAnAction" method="GET">
+    	<input type="text" name="q"/>
+		<label>Google<input type="radio" name="engine" value="google"/></label>
+		<label>DuckDuckGo<input type="radio" name="engine" value="duckDuckGo"/></label>
+		<label>Bing<input type="radio" name="engine" value="bing"/></label>
+		<label>Ask<input type="radio" name="engine" value="ask"/></label>
+		<button id="submitButton">Go!</button>
 	</form>
 
 </body>
